--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/mocha": "2.2.45",
     "@types/node": "^9.6.0",
     "@types/uuid": "^3.4.3",
+    "@types/pouchdb": "^6.3.2",
     "chai": ">=4.1.2",
     "mocha": "4.1.0",
     "tslint": ">=5.7.0",
@@ -42,6 +43,7 @@
   },
   "dependencies": {
     "pouchdb": "^7.0.0",
+    "rxjs": "^6.2.2",
     "ts-enum-util": "^3.1.0",
     "uuid": "^3.3.0"
   }
