--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sha-store",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "write data to pouchdb",
   "main": "./dist/src/index.js",
   "typings": "dist/src/index.d.ts",
@@ -15,7 +15,7 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist .pdb",
     "build": "tsc",
     "prepack": "npm run clean && npm run lint && npm run test",
     "test": "npm run clean && npm run build && npm run lint && mocha ./dist/test/*-test.js",
