--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sha-store",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "write data to pouchdb",
   "main": "./dist/src/index.js",
   "typings": "dist/src/index.d.ts",
@@ -34,17 +34,18 @@
     "@types/chai": "4.1.4",
     "@types/mocha": "5.2.5",
     "@types/node": "^10.5.2",
-    "@types/uuid": "^3.4.3",
     "@types/pouchdb": "^6.3.2",
+    "@types/uuid": "^3.4.3",
     "chai": ">=4.1.2",
     "mocha": "5.2.0",
-    "tslint": ">=5.7.0",
+    "tslint": "^5.11.0",
     "typescript": "^2.7.2"
   },
   "dependencies": {
     "pouchdb": "^7.0.0",
     "pouchdb-find": "^7.0.0",
     "rxjs": "^6.2.2",
-    "uuid": "^3.3.0"
+    "uuid": "^3.3.0",
+    "foundation-store": "^1.0.0"
   }
 }
