--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sha-store",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "write data to pouchdb",
   "main": "./dist/src/index.js",
   "typings": "dist/src/index.d.ts",
@@ -42,10 +42,10 @@
     "typescript": "^2.7.2"
   },
   "dependencies": {
+    "foundation-store": "^1.1.0",
     "pouchdb": "^7.0.0",
     "pouchdb-find": "^7.0.0",
     "rxjs": "^6.2.2",
-    "uuid": "^3.3.0",
-    "foundation-store": "^1.0.0"
+    "uuid": "^3.3.0"
   }
 }
